tests/errors/kind1.f90
program main
    implicit none
    
    real(3) :: x
    
end program
